--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: schuah <schuah@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/07 10:52:13 by schuah            #+#    #+#              #
-#    Updated: 2022/07/29 16:27:31 by schuah           ###   ########.fr        #
+#    Updated: 2022/07/30 13:59:44 by schuah           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,6 @@ CC			=	gcc
 RM			=	rm -f
 CFLAGS		=	-Wall -Wextra -Werror
 SRCS_FILES	=	ps_main_bonus \
-				ps_quicksort_bonus \
 				ps_getters_bonus \
 				ps_getters2_bonus \
 				ps_sortsmall_bonus \
@@ -27,7 +26,7 @@ SRCS_FILES	=	ps_main_bonus \
 BONUS_FILES	=	checker_main_bonus \
 				checker_getters_bonus \
 				checker_getters2_bonus \
-				checker_quicksort_bonus
+				checker_operators_bonus
 SRCS		= 	$(addprefix $(SRCS_DIR), $(addsuffix .c, $(SRCS_FILES)))
 OBJS		= 	$(addprefix $(OBJS_DIR), $(addsuffix .o, $(SRCS_FILES)))
 BONUS_SRCS	=	$(addprefix $(BONUS_DIR), $(addsuffix .c, $(BONUS_FILES)))
@@ -37,7 +36,7 @@ LIBFT_DIR	=	libft
 OBJS_DIR	=	objs/
 BONUS_DIR	=	bonus/
 
-all:			$(NAME)
+all:			$(NAME) $(BONUS_NAME)
 
 $(OBJS_DIR)%.o: $(SRCS_DIR)%.c
 				$(CC) $(CFLAGS) $(HEADER) -c $< -o $@
