--- a/push_swap/libft/Makefile
+++ b/push_swap/libft/Makefile
@@ -63,8 +63,12 @@ SRC_FILES		=	ft_isalpha \
 					ft_prints_with_flags \
 					get_next_line \
 					get_next_line_utils \
+					ft_quicksort \
 					ft_swap \
-					ft_isspace
+					ft_isspace \
+					ft_ultoa_base \
+					ft_uitoa_base \
+					ft_uitoa
 
 SRCS 			= 	$(addprefix $(SRCS_DIR), $(addsuffix .c, $(SRC_FILES)))
 OBJS 			= 	$(addprefix $(OBJS_DIR), $(addsuffix .o, $(SRC_FILES)))
